--- a/ffmv.html
+++ b/ffmv.html
@@ -12,29 +12,12 @@
 <script src="static/jquery-1.12.4.min.js"></script>
 <script src="static/common.js"></script>
 <link rel="stylesheet" href="static/css.css" media="all">
-<style type="text/css">
-.basic-grey {
-	width:580px;
-	float:left;
-	margin:2%;
-}
 
-.basic-grey-right {
-	width:580px;
-	float:left;
-	margin:2%;
-}
-.basic-grey label,.basic-grey-right label {
-	display:block;
-	margin:0px;
-}
-
-</style>
 </head>
 
 <body>
 
-
+<div class="main-box">
 <form action="" id="man_form" name="man_form" method="post" class="basic-grey">
 	<h1>
 		
@@ -142,7 +125,7 @@
 </form>
 
 
-<form action="" id="man_form" name="man_form" method="post" class="basic-grey-right">
+<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
 	<h1>		
 		女性去脂肌肉FFMV计算
 		<span style="color:red">
@@ -237,7 +220,7 @@
 		<div id="woman_result_info"></div>
 	</label>
 </form>
-
+</div>
 <script type="text/javascript">
 
 	
