--- a/vat.html
+++ b/vat.html
@@ -12,30 +12,14 @@
 <script src="static/jquery-1.12.4.min.js"></script>
 <script src="static/common.js"></script>
 <link rel="stylesheet" href="static/css.css" media="all">
-<style type="text/css">
-.basic-grey {
-	width:580px;
-	float:left;
-	margin:2%;
-}
 
-.basic-grey-right {
-	width:580px;
-	float:left;
-	margin:2%;
-}
-.basic-grey label,.basic-grey-right label {
-	display:block;
-	margin:0px;
-}
-
-</style>
 </head>
 
 <body>
 
 
-<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
+<div class="main-box">
+	<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
 	<h1>
 		
         男性腹部脂肪VAT计算
@@ -130,19 +114,10 @@
 		</span>
 		<div id="man_result_info"></div>
 	</label>
-	<!--
-	<label>
-		<span>
-			upload cvs:
-		</span>
-		<input id="man_file" type="file" name="man_file"/><input type="button" class="button" id="man_file_button" name="man_file_button" value="batch" />
-		<a>download csv modle</a>
-	</label>
-	-->
 </form>
 
 
-<form action="" id="man_form" name="man_form" method="post" class="basic-grey-right">
+	<form action="" id="woman_form" name="woman_form" method="post" class="basic-grey">
 	<h1>		
 		女性腹部脂肪VAT计算
 		<span style="color:red">
@@ -237,7 +212,7 @@
 		<div id="woman_result_info"></div>
 	</label>
 </form>
-
+</div>
 <script type="text/javascript">
 	function getRisk(gender){
 		Objgender = gender;
