--- a/vat.html
+++ b/vat.html
@@ -22,9 +22,9 @@
 	<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
 	<h1>
 		
-        男性腹部脂肪VAT计算
+        VAT estimate for male
 		<span style="color:red">
-			Age,height,weight为必选项，其他数据填写越详细结果越精准.
+			Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
 		</span>
 	</h1>
 	<label>
@@ -105,7 +105,11 @@
 		/>
 	</label>
 	<label>
-		<input type="button" class="button" id="man_button" name="man_button" value="Calculate (please click)" onclick="getRisk('man')"/>
+		<input type="button" class="button" id="man_button" name="man_button" value="Calculate" onclick="getRisk('man')"/>
+		<!--
+		<button type="button" class="button" name="seach" onclick="FuncCSVInport()">CSV Import</button>
+		<input type="file" id="csvFileInput" onchange="readCSVFile(this)" style="position: absolute;right: 0px;opacity: 0;"/>
+	-->
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="man_result_span">
@@ -119,9 +123,9 @@
 
 	<form action="" id="woman_form" name="woman_form" method="post" class="basic-grey">
 	<h1>		
-		女性腹部脂肪VAT计算
+		VAT estimate for female
 		<span style="color:red">
-			Age,height,weight为必选项，其他数据填写越详细结果越精准.
+			Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
 		</span>
 	</h1>
 	<label>
@@ -243,26 +247,27 @@
 		Leg_fatfree_mass = $(Obj_Leg_fatfree_mass).val();
 		Basal_metabolic_rate = $(Obj_Basal_metabolic_rate).val();
 		
-		result_info = $("#" + gender + "_result_info");
-		result_span = $("#" + gender + "_result_span");
 		//必填验证
 		if(!checkForm1()){
 			return false;
 		}
+		var result = "";
 		//公式3
 		if(!checkForm2_isnull() && !checkForm3_isnull()){
 			if(checkForm2_scope() && checkForm3_scope()){
-				compute_vat(sex,3);			
+				result = compute_vat(sex,3,Age,Height,Weight,WC,HC,Whole_body_fat_mass,Whole_body_fat_free_mass,Trunk_fat_mass,Trunk_fat_free_mass,Leg_fatfree_mass,Basal_metabolic_rate);			
 			}
 		//公式2
 		}else if(!checkForm2_isnull()){
 			if(checkForm2_scope()){
-				compute_vat(sex,2);	
+				result = compute_vat(sex,2,Age,Height,Weight,WC,HC,Whole_body_fat_mass,Whole_body_fat_free_mass,Trunk_fat_mass,Trunk_fat_free_mass,Leg_fatfree_mass,Basal_metabolic_rate);	
 			}
 		//公式1
 		}else {		
-			compute_vat(sex,1);	
+			result = compute_vat(sex,1,Age,Height,Weight,WC,HC,Whole_body_fat_mass,Whole_body_fat_free_mass,Trunk_fat_mass,Trunk_fat_free_mass,Leg_fatfree_mass,Basal_metabolic_rate);	
 		}
+		$("#" + gender + "_result_info").html(result);
+		$("#" + gender + "_result_span").fadeIn("slow");
 		init();
 	}		
 </script>
