--- a/vat.html
+++ b/vat.html
@@ -206,7 +206,7 @@
 		 value="5171"/>
 	</label>
 	<label>
-		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate (please click)" onclick="getRisk('woman')"/>
+		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate" onclick="getRisk('woman')"/>
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
