--- a/asat.html
+++ b/asat.html
@@ -103,7 +103,7 @@
 			/>
 		</label>
 		<label>
-			<input type="button" class="button" id="man_button" name="man_button" value="Calculate (please click)" onclick="getRisk('man')"/>
+			<input type="button" class="button" id="man_button" name="man_button" value="Calculate" onclick="getRisk('man')"/>
 		</label>
 		
 		<label style="display:none;margin-top: 20px" class="explain" id="man_result_span">
@@ -112,15 +112,6 @@
 			</span>
 			<div id="man_result_info"></div>
 		</label>
-		<!--
-		<label>
-			<span>
-				upload cvs:
-			</span>
-			<input id="man_file" type="file" name="man_file"/><input type="button" class="button" id="man_file_button" name="man_file_button" value="batch" />
-			<a>download csv modle</a>
-		</label>
-		-->
 	</form>
 
 
@@ -209,7 +200,7 @@
 			 value="5171"/>
 		</label>
 		<label>
-			<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate (please click)" onclick="getRisk('woman')"/>
+			<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate" onclick="getRisk('woman')"/>
 		</label>
 		
 		<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
