--- a/ffmv.html
+++ b/ffmv.html
@@ -104,7 +104,7 @@
 		/>
 	</label>
 	<label>
-		<input type="button" class="button" id="man_button" name="man_button" value="Calculate (please click)" onclick="getRisk('man')"/>
+		<input type="button" class="button" id="man_button" name="man_button" value="Calculate" onclick="getRisk('man')"/>
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="man_result_span">
@@ -210,7 +210,7 @@
 		 value="5171"/>
 	</label>
 	<label>
-		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate (please click)" onclick="getRisk('woman')"/>
+		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate" onclick="getRisk('woman')"/>
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
