--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="zh-cn" http-equiv="Content-Language" />
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>论文标题-首页</title>
+	<title>Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank</title>
 	<link rel="stylesheet" href="static/css.css" media="all">
 	<style type="text/css">
 		.main-box{		
