--- a/ffmv.html
+++ b/ffmv.html
@@ -105,6 +105,8 @@
 	</label>
 	<label>
 		<input type="button" class="button" id="man_button" name="man_button" value="Calculate" onclick="getRisk('man')"/>
+		<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)">CSV Import</button>
+		<input type="file" id="csvFileInput_1" onchange="readCSVFile(this,'FFMV',1)" style="position: absolute;right: 0px;opacity: 0;"/>
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="man_result_span">
@@ -211,6 +213,8 @@
 	</label>
 	<label>
 		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate" onclick="getRisk('woman')"/>
+		<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)">CSV Import</button>
+		<input type="file" id="csvFileInput_0" onchange="readCSVFile(this,'FFMV',0)" style="position: absolute;right: 0px;opacity: 0;"/>
 	</label>
 	
 	<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
