--- a/vat.html
+++ b/vat.html
@@ -108,12 +108,12 @@
 		<input type="button" class="button" id="man_button" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
 	</label>
 	
-	<label style="display:none;margin-top: 20px" class="explain" id="man_result_span">
+	<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
 		<span>
 			result:
 		</span>
 		<div id="man_result_info"></div>
-	</label>	
+	</div>	
 	<div class="download-box">			
 		<div>	
 				批量计算请下载CSV模板，按要求填写数据<br/>
@@ -216,13 +216,12 @@
 		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
 	</label>
 	
-	<label style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
+	<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
 		<span>
 			result:
 		</span>
 		<div id="woman_result_info"></div>
-	</label>
-	
+	</div>	
 	
 	<div class="download-box">			
 		<div>	
