--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 			论文作者论文作者论文作者论文作者论文作者
 		</span>
 	</h1>
-	<label style = "text-align:left;margin-left:200px;">
+	<div style = "text-align:left;margin-left:200px;">
 		<a href="vat.html"><input type="button" class="button index-input" value="isceral adipose tissue (VAT) estimate" /></a>
 		<br/>
 		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) estimate" /></a>
 		<br/>
 		<a href="ffmv.html"><input type="button" class="button index-input" value="Thigh fat-free muscle volume (FFMV) estimate" /></a>
-	</label>
+	</div>
 </form>
 </div>
 
