--- a/asat.html
+++ b/asat.html
@@ -107,9 +107,9 @@
 		</label>
 		
 		<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
-			<span>
+			<div>
 				result:
-			</span>
+			</div>
 			<div id="man_result_info"></div>
 		</div>
 		<div class="download-box">			
@@ -215,9 +215,9 @@
 		</label>
 		
 		<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
-			<span>
+			<div>
 				result:
-			</span>
+			</div>
 			<div id="woman_result_info"></div>
 		</div>
 		<div class="download-box">			
