--- a/vat.html
+++ b/vat.html
@@ -109,9 +109,9 @@
 	</label>
 	
 	<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
-		<span>
+		<div>
 			result:
-		</span>
+		</div>
 		<div id="man_result_info"></div>
 	</div>	
 	<div class="download-box">			
@@ -217,9 +217,9 @@
 	</label>
 	
 	<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
-		<span>
+		<div>
 			result:
-		</span>
+		</div>
 		<div id="woman_result_info"></div>
 	</div>	
 	
