--- a/ffmv.html
+++ b/ffmv.html
@@ -7,7 +7,7 @@
 <head>
 <meta content="zh-cn" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>去脂肌肉FFMV计算</title>
+<title>Thigh fat-free muscle volume (FFMV) estimate</title>
 
 <script src="static/jquery-1.12.4.min.js"></script>
 <script src="static/common.js"></script>
@@ -19,8 +19,7 @@
 
 <div class="main-box">
 <form action="" id="man_form" name="man_form" method="post" class="basic-grey">
-	<h1>
-		
+	<h1>		
         FFMV estimate for male
 		<span style="color:red">
 			Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
@@ -114,13 +113,12 @@
 		<div id="man_result_info"></div>
 	</div>
 	<div class="download-box">			
-		<div>	
-				批量计算请下载CSV模板，按要求填写数据<br/>
-				<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
-				<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'FFMV',1)" style="display:none;"/>
-		
+		<div class="download-input">	
+			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
+			<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'FFMV',1)" style="display:none;"/>		
 		</div>		
-		<div style="margin-left: 40px;">
+		<div>
 			<a href="model.csv" title="Download the CSV template"><img src="static/download.png"/></a>
 		</div>
 	</div>
@@ -222,12 +220,12 @@
 		<div id="woman_result_info"></div>
 	</div>
 	<div class="download-box">			
-		<div>	
-				批量计算请下载CSV模板，按要求填写数据<br/>
-				<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
-				<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'FFMV',0)" style="display:none;"/>		
+		<div class="download-input">	
+			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
+			<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'FFMV',0)" style="display:none;"/>		
 		</div>		
-		<div style="margin-left: 40px;">
+		<div>
 			<a href="model.csv" title="Download the CSV template"><img src="static/download.png"/></a>
 		</div>
 	</div>
