--- a/ffmv.html
+++ b/ffmv.html
@@ -114,7 +114,7 @@
 	</div>
 	<div class="download-box">			
 		<div class="download-input">	
-			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			For batch calculation, please download the CSV template and prepare the data as the required format.
 			<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
 			<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'FFMV',1)" style="display:none;"/>		
 		</div>		
@@ -221,7 +221,7 @@
 	</div>
 	<div class="download-box">			
 		<div class="download-input">	
-			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			For batch calculation, please download the CSV template and prepare the data as the required format.
 			<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
 			<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'FFMV',0)" style="display:none;"/>		
 		</div>		
