--- a/vat.html
+++ b/vat.html
@@ -116,7 +116,7 @@
 	</div>	
 	<div class="download-box">			
 		<div class="download-input">	
-			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			For batch calculation, please download the CSV template and prepare the data as the required format.
 			<button type="button" class="button" name="seach" onclick="FuncCSVInport(1)" title="Uploading a CVS file">Batch Calculate</button>
 			<input type="file" accept=".csv" id="csvFileInput_1" onchange="readCSVFile(this,'VAT',1)" style="display:none;"/>
 		</div>		
@@ -224,7 +224,7 @@
 	
 	<div class="download-box">			
 		<div class="download-input">	
-			Batch calculation Download the CSV template and fill in the data as required &nbsp;&nbsp;
+			For batch calculation, please download the CSV template and prepare the data as the required format.
 			<button type="button" class="button" name="seach" onclick="FuncCSVInport(0)" title="Uploading a CVS file">Batch Calculate</button>
 			<input type="file" id="csvFileInput_0" accept=".csv" onchange="readCSVFile(this,'VAT',0)" style="display:none;"/>		
 		</div>		
