--- a/ffmv.html
+++ b/ffmv.html
@@ -124,6 +124,18 @@
 	</div>
 </form>
 
+<div class="mask hide"> 
+ <div class="prompt_box">
+  <div class="prompt_title">
+   <h3>System dialog box</h3>
+   <span class="prompt_cancel">X</span>
+  </div>
+  <div class="prompt_cont">
+   <p class="prompt_text"></p>
+   <span class="prompt_sure">OK</span>
+  </div>
+ </div> 
+</div>
 
 <form action="" id="man_form" name="man_form" method="post" class="basic-grey">
 	<h1>		
