--- a/asat.html
+++ b/asat.html
@@ -230,8 +230,21 @@
 			</div>
 		</div>
 	</form>
-
 </div>
+
+<div class="mask hide"> 
+ <div class="prompt_box">
+  <div class="prompt_title">
+   <h3>System dialog box</h3>
+   <span class="prompt_cancel">X</span>
+  </div>
+  <div class="prompt_cont">
+   <p class="prompt_text"></p>
+   <span class="prompt_sure">OK</span>
+  </div>
+ </div> 
+</div>
+
 <script type="text/javascript">
 
 	
