--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h1>
 		Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank
 		<span>
-			论文作者论文作者论文作者论文作者论文作者
+			论文作者论文作者论文作者论文作者论文作者..
 		</span>
 	</h1>
 	<div style = "text-align:left;margin-left:200px;">
