--- a/vat.html
+++ b/vat.html
@@ -105,7 +105,7 @@
 		/>
 	</label>
 	<label>
-		<input type="button" class="button" id="man_button" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
+		<input type="button" class="button" id="man_button" title="Please click the button to calculate" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>		
 	</label>
 	
 	<div style="display:none;margin-top: 20px" class="explain" id="man_result_span">
@@ -212,7 +212,7 @@
 		 value="5171"/>
 	</label>
 	<label>
-		<input type="button" class="button" id="wowoman_button" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
+		<input type="button" class="button" id="wowoman_button" title="Please click the button to calculate" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
 	</label>
 	
 	<div style="display:none;margin-top: 20px" class="explain" id="woman_result_span">
